# AnT

./: .gitignore  AUTHORS  AnT.pc.in  ChangeLog  Makefile.am  Makefile.in  README  README.in  THANKS  TODO  build.sh.in  config.h  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in
doc/doxygen/: AnT_footer.html  AnT_header.html  Makefile.am  Makefile.in  doxy.cfg.in
doc/tex/: head.tex.in
src/: Makefile.am  Makefile.in
src/antvis/: Makefile.am  Makefile.in  agl.h  agl_threads.cpp  agl_threads.h  algebra3_wrapper.cpp  algebra3_wrapper.h  animator.cpp  animator.h  antvis_dialogs.cpp  antvis_dialogs.h  arrow.cpp  arrow.h  axis2d.cpp  axis2d.h  axis3d.cpp  axis3d.h  buffer.cpp  buffer.h  camera.cpp  camera.h  camera2d.cpp  camera2d.h  camera3d.cpp  camera3d.h  coloringmethods.cpp  coloringmethods.h  commonmesh.cpp  commonmesh.h  curves.cpp  curves.h  dataiterator.cpp  dataiterator.h  datasource.cpp  datasource.h  demoobjects.cpp  dimensions.cpp  dimensions.h  drawmethods.cpp  drawmethods.h  (+30 more)
src/antvis/glui/: Makefile.am  Makefile.in  algebra3.cpp  algebra3.h  glui_bitmap_img_data.cpp
src/engine/: AnT-init.cpp  AnT-init.hpp  AnT.cpp  AnT.hpp  Makefile.am  Makefile.in  MethodsPlugin.cpp  MethodsPlugin.hpp  SpatialDiffOperators.cpp  SpatialDiffOperators.hpp  SymbolFromShared.cpp  SymbolFromShared.hpp
src/engine/cas/: AttractorTracking.cpp  AttractorTracking.hpp  CoexistingAttractorScan.cpp  CoexistingAttractorScan.hpp  Makefile.am  Makefile.in
src/engine/data/: CellularState.cpp  CellularState.hpp  DynSysData.cpp  DynSysData.hpp  InitialStates.cpp  InitialStates.hpp  InitialStatesResetter.cpp  InitialStatesResetter.hpp  Makefile.am  Makefile.in  Orbit.hpp  OrbitResetter.cpp  OrbitResetter.hpp  ParameterResetter.cpp  ParameterResetter.hpp  ScanData.cpp  ScanData.hpp  ScannableObjects.cpp  ScannableObjects.hpp
src/engine/iterators/: ButcherArrays.cpp  ButcherArrays.hpp  DDE_Integrator.cpp  DDE_Integrator.hpp  FDE_Integrator.cpp  FDE_Integrator.hpp  HybridDDE_Integrator.hpp  HybridMapIterator.cpp  HybridMapIterator.hpp  HybridODE_Integrator.cpp  HybridODE_Integrator.hpp  HybridPartIterator.cpp  HybridPartIterator.hpp  Iterator.cpp  Iterator.hpp  Makefile.am  Makefile.in  MapIterator.cpp  MapIterator.hpp  ODE_Integrator.cpp  ODE_Integrator.hpp  StochasticalDDE_Integrator.cpp  StochasticalDDE_Integrator.hpp  StochasticalODE_Integrator.cpp  StochasticalODE_Integrator.hpp
src/engine/methods/: InvestigationMethod.hpp  Makefile.am  Makefile.in  MethodsData.cpp  MethodsData.hpp
src/engine/network/: ANP.cpp  ANP.hpp  ANPClient.cpp  ANPClient.hpp  ANPClientStatistics.cpp  ANPClientStatistics.hpp  ANPServer.cpp  ANPServer.hpp  Makefile.am  Makefile.in  ScanPointManagement.cpp  ScanPointManagement.hpp  Time.hpp
src/engine/proxies/: AbstractDDE_Proxy.cpp  AbstractDDE_Proxy.hpp  AbstractFDE_Proxy.cpp  AbstractFDE_Proxy.hpp  AbstractHybridFunctionProxy.cpp  AbstractHybridFunctionProxy.hpp  AbstractMapProxy.cpp  AbstractMapProxy.hpp  AbstractODE_Proxy.cpp  AbstractODE_Proxy.hpp  AveragedMapProxy.cpp  AveragedMapProxy.hpp  CML_Proxy.cpp  CML_Proxy.hpp  CODEL_Proxy.cpp  CODEL_Proxy.hpp  DDE_Proxy.cpp  DDE_Proxy.hpp  ExternalDataProxy.cpp  ExternalDataProxy.hpp  FDE_Proxy.cpp  FDE_Proxy.hpp  HybridDDE_Proxy.cpp  HybridDDE_Proxy.hpp  HybridMapProxy.cpp  HybridMapProxy.hpp  HybridODE_Proxy.cpp  HybridODE_Proxy.hpp  Makefile.am  Makefile.in  MapProxy.cpp  MapProxy.hpp  ODE_Proxy.cpp  ODE_Proxy.hpp  PDE_1d_Proxy.cpp  PDE_1d_Proxy.hpp  PoincareMapProxy.cpp  PoincareMapProxy.hpp  RecurrentMapProxy.cpp  RecurrentMapProxy.hpp  (+4 more)
src/engine/simulators/: AbstractSimulator.cpp  AbstractSimulator.hpp  AveragedMapSimulator.cpp  AveragedMapSimulator.hpp  CML_Simulator.cpp  CML_Simulator.hpp  CODEL_Simulator.cpp  CODEL_Simulator.hpp  DDE_Simulator.cpp  DDE_Simulator.hpp  ExternalDataSimulator.cpp  ExternalDataSimulator.hpp  FDE_Simulator.cpp  FDE_Simulator.hpp  HybridDDE_Simulator.cpp  HybridDDE_Simulator.hpp  HybridMapSimulator.cpp  HybridMapSimulator.hpp  HybridODE_Simulator.cpp  HybridODE_Simulator.hpp  Makefile.am  Makefile.in  MapSimulator.cpp  MapSimulator.hpp  ODE_Simulator.cpp  ODE_Simulator.hpp  PDE_1d_Simulator.cpp  PDE_1d_Simulator.hpp  PoincareMapSimulator.cpp  PoincareMapSimulator.hpp  RecurrentMapSimulator.cpp  RecurrentMapSimulator.hpp  SimulatorFactory.cpp  SimulatorFactory.hpp  StochasticalDDE_Simulator.cpp  StochasticalDDE_Simulator.hpp  StochasticalMapSimulator.cpp  StochasticalMapSimulator.hpp  StochasticalODE_Simulator.cpp  StochasticalODE_Simulator.hpp
src/engine/utils/: Averager.hpp  GlobalConstants.hpp  Makefile.am  Makefile.in  Resettable.hpp
src/gtk-gui/: AnT-gui.cpp  AnT-run.cfg  AnT-run.cpp  AnT-run.hpp  Callbacks.cpp  Callbacks.hpp  CommonDefs.hpp  Configurators.cpp  Configurators.hpp  CustomConfigurators.cpp  CustomConfigurators.hpp  FrameManager.cpp  FrameManager.hpp  GeneralWidgets.cpp  GeneralWidgets.hpp  GuiController.cpp  GuiController.hpp  MainWindow.cpp  MainWindow.hpp  Makefile.am  Makefile.in  SemanticCheck.cpp  SemanticCheck.hpp  Settings.hpp  logo.xpm
src/gtk-gui/logos/: Makefile.am  Makefile.in  logo_henon_basins.xpm  logo_henon_basins.xpm.txt  logo_henon_measure.xpm  logo_henon_measure.xpm.txt  logo_logistic.xpm  logo_logistic.xpm.txt  logo_pwLinearCont2D.xpm  logo_pwLinearCont2D.xpm.txt  logo_sigma_delta.xpm  logo_sigma_delta.xpm.txt  logo_tinkerbell.xpm  logo_tinkerbell.xpm.txt
src/gtk-gui/win_rc/: AnT-gui.rc.in  Makefile.am  Makefile.in
src/share/: Makefile.am  Makefile.def  Makefile.gnu  Makefile.in  MultivariatePolynomGenerator.hpp  MultivariatePolynomGeneratorExample.ant  MultivariatePolynomGeneratorExample.cpp  build-AnT-system.sh  gmake-AnT-system.sh  make-AnT-system.sh
src/utils/: CompilerDetector.hpp  Makefile.am  Makefile.in
src/utils/arrays/: Array.hpp  CyclicArray.hpp  Indexable.hpp  Makefile.am  Makefile.in  RealVector.cpp  RealVector.hpp  Subarray.hpp
src/utils/config/: Configuration.cpp  Configuration.hpp  DerefRec.hpp  GlobalKeys.cfg  Indentation.cpp  Indentation.hpp  KeyIndexedTree.cpp  KeyIndexedTree.hpp  (+7 more)
(+241 files in other folders)
